--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
 
-<p class="ethanrole">EthanInspiredwyd, Group Holder</p>
+<p class="ethanrole">Stan Smells, Group Holder</p>
 
 <p class="zephrole">ZephInspiredwyd, Executive Headteacher</p>
 
