--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <img class="zeph" src="zeph.png">
 
-<img class="tom" src="temp-photo.png">
+<img class="tom" src="stan.png">
 
 
 
@@ -56,14 +56,14 @@
 
 <p class="zephrole">ZephInspiredwyd, Executive Headteacher</p>
 
-<p class="tomrole">whoever replace tomtom</p>
+<p class="tomrole">StanInspired, Headteacher</p>
 
 
 
 
 <p class="zephwords">"Hello im Zeph! As Head of School, I always implement our school ethos into everything I do. Along with that, I also ensure that our Staff are always following our expectations. I hope you enjoy your time here at Arden Primary School."</p>
 
-<p class="tomwords">"Hello im Tom! I am one of the Deputy Heads hear at Arden. My roles are to ensure that all of the students are getting the most they can out of their time here. I work closly with Zeph and Ethan to ensure that everything is done correctly and to a good standard."</p>
+<p class="tomwords">"Hey There, Stan here. I am the Headteacher at Arden Primary School. My position is that I look after the school as well as all its students. I work closely with Ethan and Zeph to make our school the best it can be, I hope to see you at our sessions."</p>
 
 <p class="ethanwords">"Hello im Ethan! I am the Executive Headteacher here at Arden. I work with all of the Leadership Department to ensure that everything is running smoothly and up to our high standards. I hope you have a great time within out Primary School!"</p>
 
@@ -77,10 +77,10 @@
 <p class="alexname">@RedNinjaAlex10</p>
 
 
-<img class="stan" src="stan.png">
+<img class="stan" src="ozzy.png">
 
 
-<p class="stanname">@StanInspired</p>
+<p class="stanname">@bobsterbrown</p>
 
 <img class="milo" src="milo.png">
 
@@ -95,6 +95,18 @@
 <p class="cactusname">@LocalCactusEnjoyer</p>
 
 <p class="notices">Notices</p>
+
+<img class="schoolopenimg" src="schoolopening.png">
+
+<p class="dots2">. . . . .</p>
+
+<h1 class="openingtitle">School Opening!</h1>
+
+<p class="openingtext">Our academy leadership team is over the moon to announce to you the launch date for our first ever campus. With careful and considerate design, we have been working on this for the last few months are thrilled to announce the launch on the 22nd May 2024. See you there!</p>
+
+<div class="blue-banner">
+    <p>&copy; 2024 Tudoxsteve LTD. on behalf of Arden Primary School. All rights reserved. <a href="/privacy-policy.html">Privacy Policy</a></p>
+  </div>
 
 </body>
 
@@ -352,7 +364,7 @@ position:absolute;
 
 top:1600px;
 
-left:1295px;
+left:1278px;
 
 
 
@@ -387,7 +399,7 @@ font-size:23px;
 position:absolute;
 
 top:1640px;
-left:1230px;
+left:1210px;
 
 
 }
@@ -486,7 +498,7 @@ position:absolute;
 
 top:2200px;
 
-left:855px;
+left:850px;
 
 
 }
@@ -599,10 +611,78 @@ left:825px;
 
 }
 
+.schoolopenimg{
+
+width:400px;
+
+position:absolute;
+top:2450px;
+left:300px;
+
+border-radius:10%;
+
+}
+
+.dots2{
+
+font-size:150px;
+color:grey;
+
+position:absolute;
+
+left:760px;
+
+top:2375px;
+
+
+}
+
+.openingtitle{
+
+
+font-family:"Lexend", sans-serif;
+
+position:absolute;
+top:2425px;
+left:1200px;
+
+font-size:40px;
+
+
+}
+
+.openingtext{
+
+font-family:"Lexend", sans-serif;
+
+position:absolute;
+top:2500px;
+left:1175px;
+
+width:400px;
+font-size:25px;
+
+}
+
+
+.blue-banner {
+      background-color: #007bff;
+      color: #ffffff;
+      padding: 10px 0;
+      text-align: center;
+      position: absolute;
+      top: 3000px;
+      left: 0;
+      width: 100%;
+      z-index: 9999;
+    }
+    .blue-banner a {
+      color: #ffffff;
+      text-decoration: underline;
+    }
+
 </style>
 
-
-<script src="//code.tidio.co/kgsfjqf1xcjnx5ev8fadxakkjqdlsh3c.js"></script>
 
 
 </html>
