--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <p class="openingtext">Our academy leadership team is over the moon to announce to you the launch date for our first ever campus. With careful and considerate design, we have been working on this for the last few months are thrilled to announce the launch on the 22nd May 2024. See you there!</p>
 
 <div class="blue-banner">
-    <p>&copy; 2024 Tudoxsteve LTD. on behalf of Arden Primary School. All rights reserved. <a href="/privacy-policy.html">Privacy Policy</a></p>
+    <p>&copy; 2024 Tudoxsteve LTD. on behalf of Arden Primary School. All rights reserved. <a href="/privacypolicy.html">Privacy Policy</a></p>
   </div>
 
 </body>
