--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p class="title">Arden Primary School</p>
 
-<p class="motto">Luke, I am your father</p>
+<p class="motto">Well, pop fucking kettle</p>
 
 
 <p class="aboutusheader">About Us</p>
