--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <p class="alexname">@RedNinjaAlex10</p>
 
 
-<img class="stan" src="ozzy.png">
+<img class="stan" src="ozzy.webp">
 
 
 <p class="stanname">@bobsterbrown</p>
