--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website Under Development</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f8f9fa;
+        background-image: url('Arden Shopping Banner');
+        font-family: 'Montserrat', sans-serif;
+        text-align: center;
+        color: #343a40;
+      }
+      .container {
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: #ffffff;
+      }
+      h1 {
+        font-size: 2.5rem;
+        margin-bottom: 10px;
+        font-weight: 700;
+      }
+      p {
+        font-size: 1.2rem;
+        font-weight: 300;
+        margin-bottom: 20px;
+      }
+      .contact-info {
+        font-size: 1rem;
+        font-weight: 400;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Arden Shopping UK</h1>
+      <p>Our website is currently under development. Stay tuned for a brand new fresh website!</p>
+      <p class="contact-info">For inquiries, contact us at: <a href="mailto:info@example.com">support@ardenservices.co.uk</a></p>
+      <p class="contact-info">Or join our discord server using this link:  
+        <a href="https://discord.gg/sh7n7wcEWE" target="_blank">Arden Shopping UK Discord</a></p>
+    </div>
+  </body>
+</html>
