--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -2,11 +2,11 @@
 
     <head>
 
-        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
         <title>Privacy policy</title>
         <meta name="viewport" content="width=1920x1060, initial-scale=1, maximum-scale=1, user-scalable=no">
     </head>
-<h1 class="title">Ardensch.co.uk privacy policy</h1>
+<h1 class="title">Ardenrblx.com privacy policy</h1>
 
 <p class="waffle">This policy describes how Tudoxsteve LTD and Arden Roblox ("we","us"or"our") collects, uses and discloses information that we obtain from our visitors. Ardenrblx.com (Our "website","site") and the services we provide. <br> <br> We require information on our visitors such as browser information and your IP address. We may share this information with 3rd parties such as Github Inc (Who we are not responsable for). All data that we kept is deleted after page closure. <br> You can find out more about how github uses your data here: https://docs.github.com/en/site-policy/privacy-policies/github-general-privacy-statement </p>
 
