--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         align-items: center;
         height: 100vh;
         background-color: #f8f9fa;
-        background-image: url('Arden_Shopping_Banner.png');
+        background-image: url('gradient (1).png');
         font-family: 'Montserrat', sans-serif;
         text-align: center;
         color: #343a40;
