--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>Arden Shopping UK</h1>
+      <h1>Arden Primary School</h1>
       <p>Our website is currently under development. Stay tuned for a brand new fresh website!</p>
-      <p class="contact-info">For inquiries, contact us at: <a href="mailto:info@example.com">support@ardenservices.co.uk</a></p>
+      <p class="contact-info">For inquiries, contact us at: <a href="mailto:support@ardenservices.co.uk">support@ardenservices.co.uk</a></p>
       <p class="contact-info">Or join our discord server using this link:  
-        <a href="https://discord.gg/sh7n7wcEWE" target="_blank">Arden Shopping UK Discord</a></p>
+        <a href="https://discord.gg/sh7n7wcEWE" target="_blank">Arden Primary School Discord</a></p>
     </div>
   </body>
 </html>
