--- a/index.html
+++ b/index.html
@@ -1,52 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Under Development</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: #f8f9fa;
-        font-family: 'Montserrat', sans-serif;
-        text-align: center;
-        color: #343a40;
-      }
-      .container {
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        background-color: #ffffff;
-      }
-      h1 {
-        font-size: 2.5rem;
-        margin-bottom: 10px;
-        font-weight: 700;
-      }
-      p {
-        font-size: 1.2rem;
-        font-weight: 300;
-        margin-bottom: 20px;
-      }
-      .contact-info {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-    </style>
-  </head>
-  <body>
+    <title>Under Construction</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <div class="container">
-      <h1>Arden Primary School</h1>
-      <p>Our website is currently under development. Stay tuned for a brand new fresh website!</p>
-      <p class="contact-info">For inquiries, contact us at: <a href="mailto:support@ardenservices.co.uk">support@ardenservices.co.uk</a></p>
-      <p class="contact-info">Or join our discord server using this link:  
-        <a href="https://discord.gg/sh7n7wcEWE" target="_blank">Arden Primary School Discord</a></p>
+        <div class="left-section">
+            <h1>Under Construction</h1>
+            <p>Our website is currently undergoing scheduled maintenance. We should be back shortly. Thank you for your patience.</p>
+
+            <!-- Countdown Timer -->
+            <div id="countdown">
+                <div class="time">
+                    <span id="days"></span> Days
+                </div>
+                <div class="time">
+                    <span id="hours"></span> Hours
+                </div>
+                <div class="time">
+                    <span id="minutes"></span> Minutes
+                </div>
+                <div class="time">
+                    <span id="seconds"></span> Seconds
+                </div>
+            </div>
+        </div>
+
+        <div class="right-section">
+            <img src="your-image.jpg" alt="Image description">
+        </div>
     </div>
-  </body>
+
+    <!-- Social Media Icons -->
+   <div class="social-media">
+    <a href="https://www.roblox.com" target="_blank">
+        <img src="https://tr.rbxcdn.com/f1ce979fc64a3624b7cd829ef01bc66d/150/150/Icon" alt="Roblox">
+    </a>
+    <a href="https://discord.com" target="_blank">
+        <img src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/apps/753/3a0c3a4de3eb857b865f1b6702a71b4b0e82c6a3.ico" alt="Discord">
+    </a>
+    <a href="https://twitter.com" target="_blank">
+        <img src="https://abs.twimg.com/favicons/twitter.ico" alt="Twitter">
+    </a>
+    <a href="https://instagram.com" target="_blank">
+        <img src="https://instagram.com/favicon.ico" alt="Instagram">
+    </a>
+    <a href="https://tiktok.com" target="_blank">
+        <img src="https://www.tiktok.com/favicon.ico" alt="TikTok">
+    </a>
+</div>
+
+
+    <script src="script.js"></script>
+</body>
 </html>
