--- a/index.html
+++ b/index.html
@@ -4,55 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Construction</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="left-section">
             <h1>Under Construction</h1>
-            <p>Our website is currently undergoing scheduled maintenance. We should be back shortly. Thank you for your patience.</p>
-
+            <p class="description">Our website is currently undergoing scheduled maintenance. We should be back shortly. Thank you for your patience.</p>
+            
             <!-- Countdown Timer -->
             <div id="countdown">
                 <div class="time">
-                    <span id="days"></span> Days
+                    <span id="days"></span>
+                    <span class="label">Days</span>
                 </div>
                 <div class="time">
-                    <span id="hours"></span> Hours
+                    <span id="hours"></span>
+                    <span class="label">Hours</span>
                 </div>
                 <div class="time">
-                    <span id="minutes"></span> Minutes
+                    <span id="minutes"></span>
+                    <span class="label">Minutes</span>
                 </div>
                 <div class="time">
-                    <span id="seconds"></span> Seconds
+                    <span id="seconds"></span>
+                    <span class="label">Seconds</span>
                 </div>
             </div>
         </div>
 
         <div class="right-section">
-            <img src="your-image.jpg" alt="Image description">
+            <img src="your-image.jpg" alt="Image description" class="hero-image">
         </div>
     </div>
 
     <!-- Social Media Icons -->
-   <div class="social-media">
-    <a href="https://www.roblox.com" target="_blank">
-        <img src="https://tr.rbxcdn.com/f1ce979fc64a3624b7cd829ef01bc66d/150/150/Icon" alt="Roblox">
-    </a>
-    <a href="https://discord.com" target="_blank">
-        <img src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/apps/753/3a0c3a4de3eb857b865f1b6702a71b4b0e82c6a3.ico" alt="Discord">
-    </a>
-    <a href="https://twitter.com" target="_blank">
-        <img src="https://abs.twimg.com/favicons/twitter.ico" alt="Twitter">
-    </a>
-    <a href="https://instagram.com" target="_blank">
-        <img src="https://instagram.com/favicon.ico" alt="Instagram">
-    </a>
-    <a href="https://tiktok.com" target="_blank">
-        <img src="https://www.tiktok.com/favicon.ico" alt="TikTok">
-    </a>
-</div>
-
+    <div class="social-media">
+        <a href="https://www.roblox.com" target="_blank">
+            <img src="https://tr.rbxcdn.com/f1ce979fc64a3624b7cd829ef01bc66d/150/150/Icon" alt="Roblox">
+        </a>
+        <a href="https://discord.com" target="_blank">
+            <img src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/apps/753/3a0c3a4de3eb857b865f1b6702a71b4b0e82c6a3.ico" alt="Discord">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="https://abs.twimg.com/favicons/twitter.ico" alt="Twitter">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="https://instagram.com/favicon.ico" alt="Instagram">
+        </a>
+        <a href="https://tiktok.com" target="_blank">
+            <img src="https://www.tiktok.com/favicon.ico" alt="TikTok">
+        </a>
+    </div>
 
     <script src="script.js"></script>
 </body>
