--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
     <div class="container">
         <div class="left">
-            <img alt="Logo" class="logo" height="50" src="https://storage.googleapis.com/a1aa/image/GP8qmEwmFm5aIxVkqACF36KxOIs4JOcbprqTlQvHKpdt1F6E.jpg" width="100"/>
+            <img alt="Logo" class="logo" height="50" src="blue trans.png" width="100"/>
             <h1>Under Construction</h1>
             <p>Our website is currently undergoing scheduled maintenance. We should be back shortly. Thank you for your patience.</p>
             <div class="social-icons">
