--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             width: 100%;
             height: 95%;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            border-radius: 0px;
+            border-radius: 20px;
             overflow: hidden;
         }
         .left {
@@ -55,6 +55,8 @@
             position: absolute;
             top: 20px;
             left: 20px;
+            height: 25px;
+            width: 25px;
         }
         .right {
             flex: 1;
